# mp-projekt2

./: .gitignore  CMakeLists.txt  README.md  cards.txt  gui.py  main.c
src/: Deck  card.c  card.h  deck.c  deck.h  game_engine.c  game_engine.h  game_logic.c  gui_backend.c  input.c  input.h  list.c  list.h  text_ui.c  text_ui.h  yukon_backend.c
